# meeting-assistant

./: .gitignore  CLAUDE.md  README.md  audio.py  config.toml  live_transcribe.py  pyproject.toml
benchmarks/: benchmark.py  benchmark_diarization.py  debug_live.py
test/: analysis_5e1f935.md  ground_truth_teams.md  run_test_linux.sh
test/input/: ground_truth_signals_showdown.vtt
