[project]
name = "meeting-assistant"
version = "0.1.0"
description = "Real-time meeting transcription with speaker diarization"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper==1.2.1",
    "pyannote.audio==4.0.4",
    "soundfile==0.13.1",
    "numpy==2.4.3",
    "torch==2.10.0+cpu",
    "torchaudio==2.10.0+cpu",
    "silero-vad==6.2.1",
    "scikit-learn==1.8.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
