[project]
name = "meeting-assistant"
version = "0.1.0"
description = "Real-time meeting transcription with speaker diarization"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper==1.2.1",
    "pyannote.audio==4.0.4",
    "soundfile==0.13.1",
    "numpy==2.4.3",
    "torch==2.10.0+cu128",
    "torchaudio==2.10.0+cu128",
    "silero-vad==6.2.1",
    "scikit-learn==1.8.0",
    "sounddevice>=0.5.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
